more ref manual update, should be complete

--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -14,3 +14,7 @@
   note = "TinyOS is available at http://webs.cs.berkeley.edu",
     url = "citeseer.nj.nec.com/382595.html" }
 
+@misc{java-attributes,
+  title = "{JSR 175: A Metadata Facility for the Java Programming Language}",
+  note = "{\tt http://jcp.org/aboutJava/communityprocess/review/jsr175/}"
+}
