remove TOSDIR refs

--- a/doc/nescc.1
+++ b/doc/nescc.1
@@ -45,9 +45,7 @@ Generate documentation for the compiled component in directory \fIdir\fR.
 .TP
 \fB-topdir=\fIdir\fR 
 Specify directory paths that should be stripped from the source file names
-when generating "package names" for the documentation files.  The directory
-above \fBTOSDIR\fR is automatically added, so this option is only needed for
-directories outside the main TinyOS distribution.
+when generating "package names" for the documentation files.
 .TP
 \fB-graphviz=y\fR|\fBn\fR 
 Explicitly enable or disable the use of the graphviz tool in the generated
