--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a beta release of the  1.2 version of nesC. 
+This is version 1.2 of the nesC compiler.
 
 Installation instructions are in INSTALL. Note that nesC needs patched
 versions of the GNU assemblers for the avr and msp430 architectures. These
