--- a/nregress/dump/.ok/wiringfns.tst.1
+++ b/nregress/dump/.ok/wiringfns.tst.1
@@ -49,7 +49,7 @@
       <to><function-ref name="start" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </to>
@@ -63,7 +63,7 @@
       <to><function-ref name="stop" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </to>
@@ -144,7 +144,7 @@
       <from><function-ref name="start" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </from>
@@ -154,7 +154,7 @@
       <from><function-ref name="stop" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </from>
@@ -164,7 +164,7 @@
       <from><function-ref name="fired" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </from>
@@ -175,7 +175,7 @@
       <to><function-ref name="fired" scoped="" ref="HEX"/>
       <arguments>
         <value cst="I:0">
-          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"/>
+          <type-int cname="unsigned int" unsigned="" size="I:4" alignment="I:4"></type-int>
         </value>
       </arguments>
       </to>
@@ -297,4 +297,12 @@
   </interfacedefs>
   <tags>
   </tags>
+  <variables>
+  </variables>
+  <constants>
+  </constants>
+  <functions>
+  </functions>
+  <typedefs>
+  </typedefs>
 </nesc>
