mention python tool in tool list

--- a/doc/nescc-mig.1
+++ b/doc/nescc-mig.1
@@ -31,8 +31,8 @@ active message type for \fImessage-type\fR. If you need access to other
 constants from your nesC application, please consult the \fBnescc-ncg\fR man
 page.
 
-The current tools are \fBjava\fR and \fBcsharp\fR, which generate java and
-C# classes that encode and decode messages. 
+The current tools are \fBjava\fR, \fBcsharp\fR and \fBpython\fR, which
+generate java, C# and python classes that encode and decode messages.
 .SH OPTIONS
 You can pass any \fBnescc\fR option, as well as
 .TP
