--- a/doc/nescc-ncg.1
+++ b/doc/nescc-ncg.1
@@ -31,8 +31,9 @@ the specified constant will be extracted, in the latter case all constants
 from the specified C file will be extracted. Only constants declared in C
 files will be found by \fBnescc-ncg\fR.
 
-Currently there is only one tool, \fBjava\fR, which generates a java class
-that contains the values of the requested constants. 
+The current tools are \fBjava\fR and \fBpython\fR, which
+generate java and python classes that contain the values of the 
+requested constants. 
 .SH OPTIONS
 You can pass any \fBnescc\fR option, as well as
 .TP
