--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 This is version 1.2.1 of the nesC compiler.
 
 Installation instructions are in INSTALL. Note that nesC needs patched
-versions of the GNU assemblers for the avr and msp430 architectures. These
-patched versions can be found at www.tinyos.net (look for the avr-binutils
-and msp430-binutils distributions) - they are no longer distributed with
-nesC.
+versions of the GNU assemblers for the avr and msp430 architectures. For
+more information, check the INSTALL file.
+
 
 Changes in nesC 1.2.2
 =====================
