--- a/nregress/generics/.ok/str7.1
+++ b/nregress/generics/.ok/str7.1
@@ -3,9 +3,8 @@
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod1b*/mod$1$sc$init(void);
 static  void /*test.mod2*/mod$2$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
@@ -29,25 +28,22 @@ enum /*test.mod2*/mod$2$__nesc_unnamed4244 {
   mod$2$max = 1U
 };
 static inline  void /*test.mod2*/mod$2$sc$init(void);
-static inline  
 #line 8
-void /*test.mod2*/mod$2$sc$init(void)
+static inline  void /*test.mod2*/mod$2$sc$init(void)
 #line 8
 {
   /*test.mod2*/mod$2$n += /*test.mod2*/mod$2$max;
 }
 
-static inline  
 #line 8
-void /*test.mod1b*/mod$1$sc$init(void)
+static inline  void /*test.mod1b*/mod$1$sc$init(void)
 #line 8
 {
   /*test.mod1b*/mod$1$n += /*test.mod1b*/mod$1$max;
 }
 
-static inline  
 #line 8
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 8
 {
   /*test.mod1*/mod$0$n += /*test.mod1*/mod$0$max;
