--- a/nregress/generics/.ok/array1.1
+++ b/nregress/generics/.ok/array1.1
@@ -2,30 +2,27 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
 int /*test.mod1*/mod$0$x[2 + 2];
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
 int /*test.mod2*/mod$1$x[20 + 2];
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 7
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 7
 {
   /*test.mod2*/mod$1$x[0] = 2;
 }
 
-static inline  
 #line 7
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 7
 {
   /*test.mod1*/mod$0$x[0] = 2;
