--- a/nregress/generics/.ok/array2.1
+++ b/nregress/generics/.ok/array2.1
@@ -2,34 +2,31 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
 int /*test.mod1*/mod$0$x[2 + 2];
 
 static int /*test.mod1*/mod$0$a = sizeof /*test.mod1*/mod$0$x;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
 int /*test.mod2*/mod$1$x[20 + 2];
 
 static int /*test.mod2*/mod$1$a = sizeof /*test.mod2*/mod$1$x;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 9
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 9
 {
   /*test.mod2*/mod$1$x[0] = /*test.mod2*/mod$1$a;
 }
 
-static inline  
 #line 9
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 9
 {
   /*test.mod1*/mod$0$x[0] = /*test.mod1*/mod$0$a;
