--- a/nregress/generics/.ok/call1.1
+++ b/nregress/generics/.ok/call1.1
@@ -2,17 +2,14 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-static  
 # 5 "mod.nc"
-void /*test.mod1*/mod$0$sc$init(void);
-static  
+static  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-void /*test.mod2*/mod$1$sc$init(void);
+static  void /*test.mod2*/mod$1$sc$init(void);
 # 2 "sc.nc"
 inline static  void main$sc$init(void){
 #line 2
@@ -29,9 +26,8 @@ void  main$entry(void)
   main$sc$init();
 }
 
-static  
 # 5 "mod.nc"
-void /*test.mod1*/mod$0$sc$init(void)
+static  void /*test.mod1*/mod$0$sc$init(void)
 #line 5
 {
   if (2) {
@@ -39,9 +35,8 @@ void /*test.mod1*/mod$0$sc$init(void)
     }
 }
 
-static  
 #line 5
-void /*test.mod2*/mod$1$sc$init(void)
+static  void /*test.mod2*/mod$1$sc$init(void)
 #line 5
 {
   if (20) {
