--- a/nregress/generics/.ok/case1.1
+++ b/nregress/generics/.ok/case1.1
@@ -2,22 +2,20 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
 int /*test.mod1*/mod$0$x;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
 int /*test.mod2*/mod$1$x;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 7
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 7
 {
   switch (/*test.mod2*/mod$1$x) 
@@ -27,9 +25,8 @@ void /*test.mod2*/mod$1$sc$init(void)
     }
 }
 
-static inline  
 #line 7
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 7
 {
   switch (/*test.mod1*/mod$0$x) 
