--- a/nregress/generics/.ok/cst2.1
+++ b/nregress/generics/.ok/cst2.1
@@ -2,36 +2,31 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-static inline 
 # 5 "mod.nc"
-int /*test.mod1*/mod$0$f(void);
+static inline int /*test.mod1*/mod$0$f(void);
 
 int /*test.mod1*/mod$0$x = 1 ? 2 : /*test.mod1*/mod$0$f();
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
-static inline 
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-int /*test.mod2*/mod$1$f(void);
+static inline int /*test.mod2*/mod$1$f(void);
 
 int /*test.mod2*/mod$1$x = 1 ? 2 : /*test.mod2*/mod$1$f();
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 9
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 9
 {
   /*test.mod2*/mod$1$x = 2;
 }
 
-static inline  
 #line 9
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 9
 {
   /*test.mod1*/mod$0$x = 2;
@@ -46,28 +41,26 @@ inline static  void main$sc$init(void){
 #line 2
 }
 #line 2
+# 5 "mod.nc"
+static inline int /*test.mod1*/mod$0$f(void)
+#line 5
+{
+#line 5
+  return 1;
+}
+
+#line 5
+static inline int /*test.mod2*/mod$1$f(void)
+#line 5
+{
+#line 5
+  return 1;
+}
+
 # 5 "main.nc"
 void  main$entry(void)
 #line 5
 {
   main$sc$init();
-}
-
-static inline 
-# 5 "mod.nc"
-int /*test.mod1*/mod$0$f(void)
-#line 5
-{
-#line 5
-  return 1;
-}
-
-static inline 
-#line 5
-int /*test.mod2*/mod$1$f(void)
-#line 5
-{
-#line 5
-  return 1;
 }
 
