--- a/nregress/generics/.ok/enum1.1
+++ b/nregress/generics/.ok/enum1.1
@@ -2,38 +2,37 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-# 5 "mod.nc"
+# 9 "mod.nc"
+#line 5
 enum /*test.mod1*/mod$0$__nesc_unnamed4242 {
   mod$0$first = 2, 
   mod$0$next, 
   mod$0$last = 3
 } /*test.mod1*/mod$0$a;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
+#line 9
 #line 5
 enum /*test.mod2*/mod$1$__nesc_unnamed4243 {
   mod$1$first = 20, 
   mod$1$next, 
   mod$1$last = 3
 } /*test.mod2*/mod$1$a;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 11
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 11
 {
   /*test.mod2*/mod$1$a = /*test.mod2*/mod$1$first + /*test.mod2*/mod$1$last - 20;
 }
 
-static inline  
 #line 11
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 11
 {
   /*test.mod1*/mod$0$a = /*test.mod1*/mod$0$first + /*test.mod1*/mod$0$last - 2;
