--- a/nregress/generics/.ok/intf1.1
+++ b/nregress/generics/.ok/intf1.1
@@ -5,17 +5,14 @@ typedef char *main$sc$t2;
 typedef int mod$sc$t1;
 typedef char *mod$sc$t2;
 static  mod$sc$t1 mod$sc$init(mod$sc$t2 arg_hex, int arg_hex);
-static  
 # 2 "sc.nc"
-main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex);
+static  main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex);
 # 5 "main.nc"
 void  main$entry(void);
-static inline  
 # 5 "mod.nc"
-int mod$sc$init(char *foo, int b);
-static inline  
+static inline  int mod$sc$init(char *foo, int b);
 #line 5
-int mod$sc$init(char *foo, int b)
+static inline  int mod$sc$init(char *foo, int b)
 #line 5
 {
   return foo[0] + b;
