--- a/nregress/generics/.ok/intf4.1
+++ b/nregress/generics/.ok/intf4.1
@@ -14,49 +14,22 @@ typedef int /*test.conf2.themod*/mod$1$sc$t1;
 typedef /*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$sc$t2;
 static  /*test.conf1.themod*/mod$0$sc$t1 /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$sc$t2 arg_hex, int arg_hex);
 static  /*test.conf2.themod*/mod$1$sc$t1 /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$sc$t2 arg_hex, int arg_hex);
-static  
 # 2 "sc.nc"
-main$sc2$t1 main$sc2$init(main$sc2$t2 arg_hex, int arg_hex);
-static  
+static  main$sc2$t1 main$sc2$init(main$sc2$t2 arg_hex, int arg_hex);
 #line 2
-main$sc1$t1 main$sc1$init(main$sc1$t2 arg_hex, int arg_hex);
+static  main$sc1$t1 main$sc1$init(main$sc1$t2 arg_hex, int arg_hex);
 # 6 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
 /*test.conf1.themod*/mod$0$t /*test.conf1.themod*/mod$0$x;
-static inline  
-int /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$t foo, int b);
+
+static inline  int /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$t foo, int b);
 #line 5
 /*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$x;
-static inline  
-int /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$t foo, int b);
-static inline  
+
+static inline  int /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$t foo, int b);
 #line 7
-int /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$t foo, int b)
-#line 7
-{
-  /*test.conf2.themod*/mod$1$x = foo;
-  return b + 20;
-}
-
-# 2 "sc.nc"
-inline static  main$sc2$t1 main$sc2$init(main$sc2$t2 arg_hex, int arg_hex){
-#line 2
-  int result;
-#line 2
-
-#line 2
-  result = /*test.conf2.themod*/mod$1$sc$init(arg_hex, arg_hex);
-#line 2
-
-#line 2
-  return result;
-#line 2
-}
-#line 2
-static inline  
-# 7 "mod.nc"
-int /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$t foo, int b)
+static inline  int /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$t foo, int b)
 #line 7
 {
   /*test.conf1.themod*/mod$0$x = foo;
@@ -71,6 +44,29 @@ inline static  main$sc1$t1 main$sc1$init(main$sc1$t2 arg_hex, int arg_hex){
 
 #line 2
   result = /*test.conf1.themod*/mod$0$sc$init(arg_hex, arg_hex);
+#line 2
+
+#line 2
+  return result;
+#line 2
+}
+#line 2
+# 7 "mod.nc"
+static inline  int /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$t foo, int b)
+#line 7
+{
+  /*test.conf2.themod*/mod$1$x = foo;
+  return b + 20;
+}
+
+# 2 "sc.nc"
+inline static  main$sc2$t1 main$sc2$init(main$sc2$t2 arg_hex, int arg_hex){
+#line 2
+  int result;
+#line 2
+
+#line 2
+  result = /*test.conf2.themod*/mod$1$sc$init(arg_hex, arg_hex);
 #line 2
 
 #line 2
