--- a/nregress/generics/.ok/numeric5.1
+++ b/nregress/generics/.ok/numeric5.1
@@ -4,9 +4,8 @@ typedef int /*test.mod1*/mod$0$t;
 typedef char /*test.mod2*/mod$1$t;
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
@@ -15,26 +14,24 @@ struct /*test.mod1*/mod$0$oops {
 };
 
 typedef /*test.mod1*/mod$0$t  /*test.mod1*/mod$0$u;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
 struct /*test.mod2*/mod$1$oops {
   /*test.mod2*/mod$1$t x;
 };
 
 typedef /*test.mod2*/mod$1$t  /*test.mod2*/mod$1$u;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 11
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 11
 {
 }
 
-static inline  
 #line 11
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 11
 {
 }
