--- a/nregress/generics/.ok/parm3.1
+++ b/nregress/generics/.ok/parm3.1
@@ -4,28 +4,24 @@ typedef int aa$Basic$crestype;
 typedef int bb$b2$crestype;
 typedef int bb$b1$crestype;
 static  int aa$Basic$bind(char arg_hex, int arg_hex);
-static inline  
 # 5 "aa.nc"
-int aa$Basic$bind(char num, int settings);
-static  
+static inline  int aa$Basic$bind(char num, int settings);
 # 3 "i.nc"
-int bb$b2$bind(
+static  int bb$b2$bind(
 # 3 "bb.nc"
 char arg_hex, 
 # 3 "i.nc"
 int arg_hex);
-static  
 #line 3
-int bb$b1$bind(
+static  int bb$b1$bind(
 # 2 "bb.nc"
 char arg_hex, 
 # 3 "i.nc"
 int arg_hex);
 # 6 "bb.nc"
 void  bb$f(void);
-static inline  
 # 5 "aa.nc"
-int aa$Basic$bind(char num, int settings)
+static inline  int aa$Basic$bind(char num, int settings)
 #line 5
 {
 #line 5
@@ -33,7 +29,7 @@ int aa$Basic$bind(char num, int settings)
 }
 
 # 3 "i.nc"
-inline static  int bb$b2$bind(char arg_hex, int arg_hex){
+inline static  int bb$b1$bind(char arg_hex, int arg_hex){
 #line 3
   int result;
 #line 3
@@ -47,7 +43,7 @@ inline static  int bb$b2$bind(char arg_hex, int arg_hex){
 #line 3
 }
 #line 3
-inline static  int bb$b1$bind(char arg_hex, int arg_hex){
+inline static  int bb$b2$bind(char arg_hex, int arg_hex){
 #line 3
   int result;
 #line 3
