--- a/nregress/generics/.ok/str6.1
+++ b/nregress/generics/.ok/str6.1
@@ -2,29 +2,24 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-static inline  
 # 5 "mod.nc"
-void /*test.mod1*/mod$0$sc$init(void);
-static inline  
+static inline  void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 5
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 5
 {
   int a[(int )"oops"];
 
 }
 
-static inline  
 #line 5
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 5
 {
   int a[(int )"a"];
