--- a/nregress/generics/.ok/struct4.1
+++ b/nregress/generics/.ok/struct4.1
@@ -2,12 +2,12 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-# 5 "mod.nc"
+# 8 "mod.nc"
+#line 5
 struct /*test.mod1*/mod$0$hmm {
   int x : 2;
   int f;
@@ -15,8 +15,9 @@ struct /*test.mod1*/mod$0$hmm {
 
 int /*test.mod1*/mod$0$a = sizeof /*test.mod1*/mod$0$x;
 int /*test.mod1*/mod$0$b = (int )& ((struct /*test.mod1*/mod$0$hmm *)0)->f;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
+#line 8
 #line 5
 struct /*test.mod2*/mod$1$hmm {
   int x : 20;
@@ -25,19 +26,17 @@ struct /*test.mod2*/mod$1$hmm {
 
 int /*test.mod2*/mod$1$a = sizeof /*test.mod2*/mod$1$x;
 int /*test.mod2*/mod$1$b = (int )& ((struct /*test.mod2*/mod$1$hmm *)0)->f;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 13
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 13
 {
   /*test.mod2*/mod$1$x.x = /*test.mod2*/mod$1$a + /*test.mod2*/mod$1$b;
 }
 
-static inline  
 #line 13
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 13
 {
   /*test.mod1*/mod$0$x.x = /*test.mod1*/mod$0$a + /*test.mod1*/mod$0$b;
