--- a/nregress/generics/.ok/struct6.1
+++ b/nregress/generics/.ok/struct6.1
@@ -2,12 +2,12 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-# 5 "mod.nc"
+# 8 "mod.nc"
+#line 5
 struct /*test.mod1*/mod$0$hmm {
   int x : 2;
   char f;
@@ -20,8 +20,9 @@ enum /*test.mod1*/mod$0$__nesc_unnamed4242 {
 };
 #line 12
 int /*test.mod1*/mod$0$c = 1 / (/*test.mod1*/mod$0$b == 1 || /*test.mod1*/mod$0$b == 3 ? 1 : 0);
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
+#line 8
 #line 5
 struct /*test.mod2*/mod$1$hmm {
   int x : 20;
@@ -35,19 +36,17 @@ enum /*test.mod2*/mod$1$__nesc_unnamed4243 {
 };
 #line 12
 int /*test.mod2*/mod$1$c = 1 / (/*test.mod2*/mod$1$b == 1 || /*test.mod2*/mod$1$b == 3 ? 1 : 0);
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 14
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 14
 {
   /*test.mod2*/mod$1$x.x = /*test.mod2*/mod$1$a + /*test.mod2*/mod$1$b + /*test.mod2*/mod$1$c;
 }
 
-static inline  
 #line 14
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 14
 {
   /*test.mod1*/mod$0$x.x = /*test.mod1*/mod$0$a + /*test.mod1*/mod$0$b + /*test.mod1*/mod$0$c;
