--- a/nregress/generics/.ok/type1.1
+++ b/nregress/generics/.ok/type1.1
@@ -2,34 +2,33 @@
 #define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-# 5 "mod.nc"
+# 7 "mod.nc"
+#line 5
 struct /*test.mod1*/mod$0$oops {
   int x;
 } /*test.mod1*/mod$0$a;
-static inline  
-void /*test.mod1*/mod$0$sc$init(void);
+
+static inline  void /*test.mod1*/mod$0$sc$init(void);
+#line 7
 #line 5
 struct /*test.mod2*/mod$1$oops {
   int x;
 } /*test.mod2*/mod$1$a;
-static inline  
-void /*test.mod2*/mod$1$sc$init(void);
-static inline  
+
+static inline  void /*test.mod2*/mod$1$sc$init(void);
 #line 9
-void /*test.mod2*/mod$1$sc$init(void)
+static inline  void /*test.mod2*/mod$1$sc$init(void)
 #line 9
 {
   /*test.mod2*/mod$1$a.x = 2;
 }
 
-static inline  
 #line 9
-void /*test.mod1*/mod$0$sc$init(void)
+static inline  void /*test.mod1*/mod$0$sc$init(void)
 #line 9
 {
   /*test.mod1*/mod$0$a.x = 2;
