--- a/nregress/generics/.ok/type6.1
+++ b/nregress/generics/.ok/type6.1
@@ -6,34 +6,34 @@ typedef float */*test.conf2*/conf$1$t;
 typedef /*test.conf2*/conf$1$t */*test.conf2.themod*/mod$1$t;
 static  void /*test.conf1.themod*/mod$0$sc$init(void);
 static  void /*test.conf2.themod*/mod$1$sc$init(void);
-static  
 # 2 "sc.nc"
-void main$sc$init(void);
+static  void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
-# 5 "mod.nc"
+# 7 "mod.nc"
+#line 5
 struct /*test.conf1.themod*/mod$0$oops {
   /*test.conf1.themod*/mod$0$t x;
 } /*test.conf1.themod*/mod$0$a;
-static inline 
-/*test.conf1.themod*/mod$0$t /*test.conf1.themod*/mod$0$f(/*test.conf1.themod*/mod$0$t x);
-static inline  
+
+static inline /*test.conf1.themod*/mod$0$t /*test.conf1.themod*/mod$0$f(/*test.conf1.themod*/mod$0$t x);
 
 
-void /*test.conf1.themod*/mod$0$sc$init(void);
+
+static inline  void /*test.conf1.themod*/mod$0$sc$init(void);
+#line 7
 #line 5
 struct /*test.conf2.themod*/mod$1$oops {
   /*test.conf2.themod*/mod$1$t x;
 } /*test.conf2.themod*/mod$1$a;
-static inline 
-/*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$f(/*test.conf2.themod*/mod$1$t x);
-static inline  
+
+static inline /*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$f(/*test.conf2.themod*/mod$1$t x);
 
 
-void /*test.conf2.themod*/mod$1$sc$init(void);
-static inline 
+
+static inline  void /*test.conf2.themod*/mod$1$sc$init(void);
 #line 9
-/*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$f(/*test.conf2.themod*/mod$1$t x)
+static inline /*test.conf2.themod*/mod$1$t /*test.conf2.themod*/mod$1$f(/*test.conf2.themod*/mod$1$t x)
 #line 9
 {
   return x;
@@ -45,9 +45,8 @@ static inline  void /*test.conf2.themod*/mod$1$sc$init(void)
   /*test.conf2.themod*/mod$1$a.x = /*test.conf2.themod*/mod$1$f(/*test.conf2.themod*/mod$1$a.x);
 }
 
-static inline 
 #line 9
-/*test.conf1.themod*/mod$0$t /*test.conf1.themod*/mod$0$f(/*test.conf1.themod*/mod$0$t x)
+static inline /*test.conf1.themod*/mod$0$t /*test.conf1.themod*/mod$0$f(/*test.conf1.themod*/mod$0$t x)
 #line 9
 {
   return x;
